Fixed misalignment issue
When resized, Join Archimedes and DOB buttons were moving in different directions. Issue is now resolved!

--- a/src/pages/SignupPage.module.css
+++ b/src/pages/SignupPage.module.css
@@ -132,9 +132,13 @@
     color: white;
   }
 
+  
+
   .dobInputs {
     display: flex;
     margin-top: 0.5em; /* Add some space between the label and the input fields */
+    width: 100%; /* Full width for alignment */
+   
   }
 
   .firstInput {
